cmake_minimum_required(VERSION 3.19)
project(untitled4)

set(CMAKE_CXX_STANDARD 14)

#add_executable(untitled4 main.cpp T1.cpp T3.cpp T4.cpp T5.cpp T6.cpp T7.cpp)
#T16.cpp T17.cpp T18.cpp T19.cpp T20.cpp T21.cpp T22.cpp T23.cpp T24.cpp T25.cpp
add_executable(untitled4 T7.cpp T8.cpp T9.cpp T10.cpp T11.cpp T2.cpp T12.cpp T13.cpp T14.cpp T15.cpp T16.cpp T17.cpp T18.cpp T19.cpp T20.cpp T21.cpp  T22.cpp T23.cpp T24.cpp T26.cpp)